@@ -24,6 +24,7 @@
   re-order them. You can do so by dragging a field and dropping it
   into the new position.</p>
 
+  <h2>Keys</h2>
   <p>Keys for the Struct are created similar to how Fields are
   created. Select the Key tool from the palette and add it to the
   Struct. Then in the Struct figure type the name of the Field that
