@@ -33,5 +33,15 @@
   "../diagrams/moving_between_diagrams.html">Moving between
   Diagrams</a> for information on working with multiple diagram
   editors.</p>
+  
+   <div class="caution">
+    <p>Although the <a href="../diagrams/modeling_perspective.html">OpenDDS Modeling perspective</a>
+    includes a Properties view exposing the underlying model, effort has been
+    made to minimize the need go between the diagram and Properties view. Care
+    should be taken when making modifications in the Properties view
+    since it may be possible to violate certain modeling assumptions that the
+    diagram components are built on. </p>
+  </div>
+ 
 </body>
 </html>
